[b]Version 0.6.3[/b]:

(2008-09-15)
 * (Windows) Added a new option in Preferences->General that allows the user 
   to select which screen will display the video when using directx as video 
   driver. This option is visible only when directx is selected.

(2008-09-14)
 * Check in Core::changeSubtitle() that the selected subtitle is in a valid
   range. This should avoid crashes.

(2008-09-13)
 * Added the Kurdish translation, by Si_murg56 <simurg56@gmail.com>

(2008-09-12)
 * Added a new option in Preferences->General->Video: "Draw video using slices"
   (-slices / -noslices in mplayer). Enabled by default.
 * Bugfix: the items in the combobox for the mouse right click action weren't
   retranslated properly.

(2008-09-09)
 * For some unknown reason sometimes the playlist is not shown. I think this 
   is because it's outside of the screen. Now smplayer checks if the playlist 
   is actually outside of the screen, and in that case it's moved to pos 0x0.

(2008-09-08)
 * Moved the option "Create index if needed" from the section Performance to
   Advanced.
 * Added an icon for the audio equalizer action.

(2008-09-06)
 * Added a new option in Preferences->Performance: Threads for decoding.
   Sets the number of threads to use for decoding (for MPEG-1/2 and H.264 only).
   It could be useful for multicore processors.
 * Bugfix: the volume may be changed on startup even if the option "Change 
   volume on every file" was off. 

(2008-09-04)
 * Don't change the window size if the panel is already the requested size. 
   Seems to fix a problem when using Compiz.

(2008-09-01)
 * The option "Repaint background of the video window" (in Preferences->
   Advanced) is now enabled by default in linux. It seems with newer versions
   of Qt it works well with it. If you have problems with the video window
   going blank, just disable the option.
 * The single instance option is now disabled by default on Windows, as some 
   people reported smplayer didn't start with it.